remove usages of commons lang 2
use native java instead